Rediseño de la página, correccion de inputs y disponibilidad automática

--- a/todo_frontend/pages/create_books.html
+++ b/todo_frontend/pages/create_books.html
@@ -1,87 +1,168 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Crear Libro</title>
-  <link rel="stylesheet" href="./assets/formulario.css" />
-  <!-- Bootstrap (opcional para estilos) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    /* Puedes agregar estilos adicionales aquí si lo deseas */
-    body { background-color: #f8f9fa; }
-    .container { max-width: 600px; }
-  </style>
+    <!-- Metadata -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Formulario para crear un libro">
+    <meta name="keywords" content="HTML, CSS, JavaScript, NodeJS, Prisma">
+    <title>Crear Libro</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Estilos personalizados -->
+    <link href="./assets/style.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container mt-4">
-    <h1>Crear Libro</h1>
-    <form id="bookCreateForm">
-      <div class="mb-3">
-        <label for="createBookAuthorId" class="form-label">ID del Autor</label>
-        <input type="number" class="form-control" id="createBookAuthorId" name="author_id" required>
-      </div>
-      <div class="mb-3">
-        <label for="createBookTitle" class="form-label">Título</label>
-        <input type="text" class="form-control" id="createBookTitle" name="title" required>
-      </div>
-      <div class="mb-3">
-        <label for="createBookAvailability" class="form-label">Disponibilidad</label>
-        <select class="form-control" id="createBookAvailability" name="availability" required>
-          <option value="Disponible">Disponible</option>
-          <option value="No disponible">No disponible</option>
-        </select>
-      </div>
-      <div class="mb-3">
-        <label for="createBookStock" class="form-label">Stock</label>
-        <input type="number" class="form-control" id="createBookStock" name="stock" min="0" required>
-      </div>
-      <div class="mb-3">
-        <label for="createBookPublicationDate" class="form-label">Fecha de Publicación</label>
-        <input type="text" class="form-control" id="createBookPublicationDate" name="publication_date" required>
-      </div>
-      <div class="mb-3">
-        <label for="createBookGenre" class="form-label">Género</label>
-        <input type="text" class="form-control" id="createBookGenre" name="genre" required>
-      </div>
-      <div class="mb-3">
-        <label for="createBookLanguage" class="form-label">Idioma</label>
-        <input type="text" class="form-control" id="createBookLanguage" name="language" required>
-      </div>
-      <button type="submit" class="btn btn-primary">Crear Libro</button>
-    </form>
-  </div>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-md navbar-light fixed-top">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar-toggler">
+                <a class="navbar-brand" href="index.html">
+                    <img src="images/icon.png" width="50" alt="Website icon">
+                </a>
+                <ul class="navbar-nav d-flex justify-content-center align-items-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="books.html">Libros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="loans.html">Préstamos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="authors.html">Autores</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-outline-dark" href="create_books.html">Añadir Libro</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-  <script>
-    document.getElementById('bookCreateForm').addEventListener('submit', (e) => {
-      e.preventDefault();
-      const newBook = {
-        author_id: parseInt(document.getElementById('createBookAuthorId').value, 10),
-        title: document.getElementById('createBookTitle').value,
-        availability: document.getElementById('createBookAvailability').value,
-        stock: parseInt(document.getElementById('createBookStock').value, 10),
-        publication_date: document.getElementById('createBookPublicationDate').value,
-        genre: document.getElementById('createBookGenre').value,
-        language: document.getElementById('createBookLanguage').value,
-      };
+    <!-- Formulario para crear un libro -->
+    <section class="container mt-5 pt-5">
+        <h1 class="page-title">Crear Nuevo Libro</h1>
+        <form id="createBookForm">
+            <!-- Campo para el ID del autor -->
+            <div class="mb-3">
+                <label for="author_id" class="form-label">ID del Autor</label>
+                <select class="form-control" id="author_id" name="author_id" required>
+                    <!-- Opciones cargadas dinámicamente -->
+                </select>
+            </div>
 
-      fetch('http://localhost:5000/api/books', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(newBook)
-      })
-      .then(response => {
-        if (!response.ok) throw new Error("Error al crear el libro");
-        return response.json();
-      })
-      .then(data => {
-        alert("Libro creado exitosamente");
-        window.location.href = 'books.html'; // Redirige a la lista de libros
-      })
-      .catch(error => {
-        console.error(error);
-        alert("Error al crear el libro");
-      });
-    });
-  </script>
+            <!-- Campo para el stock -->
+            <div class="mb-3">
+                <label for="stock" class="form-label">Stock</label>
+                <input type="number" class="form-control" id="stock" name="stock" required min="0">
+            </div>
+
+            <!-- Campo para el título -->
+            <div class="mb-3">
+                <label for="title" class="form-label">Título</label>
+                <input type="text" class="form-control" id="title" name="title" required>
+            </div>
+
+            <!-- Campo para la fecha de publicación -->
+            <div class="mb-3">
+                <label for="publication_date" class="form-label">Fecha de Publicación</label>
+                <input type="date" class="form-control" id="publication_date" name="publication_date" required>
+            </div>
+
+            <!-- Campo para el género -->
+            <div class="mb-3">
+                <label for="genre" class="form-label">Género</label>
+                <select class="form-control" id="genre" name="genre" required>
+                    <option value="Romance">Romance</option>
+                    <option value="Acción">Acción</option>
+                    <option value="Aventura">Aventura</option>
+                    <option value="Fantasía">Fantasía</option>
+                    <option value="Terror">Terror</option>
+                </select>
+            </div>
+
+            <!-- Campo para el idioma -->
+            <div class="mb-3">
+                <label for="language" class="form-label">Idioma</label>
+                <select class="form-control" id="language" name="language" required>
+                    <option value="Español">Español</option>
+                    <option value="Inglés">Inglés</option>
+                    <option value="Francés">Francés</option>
+                    <option value="Portugués">Portugués</option>
+                    <option value="Alemán">Alemán</option>
+                </select>
+            </div>
+
+            <!-- Botón para enviar el formulario -->
+            <button type="submit" class="btn btn-primary">Crear Libro</button>
+        </form>
+    </section>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Script para manejar el envío del formulario -->
+    <script>
+        document.getElementById('createBookForm').addEventListener('submit', async (event) => {
+            event.preventDefault(); // Evita que el formulario se envíe de forma tradicional
+
+            // Obtener los datos del formulario
+            const formData = {
+                author_id: document.getElementById('author_id').value,
+                stock: document.getElementById('stock').value,
+                title: document.getElementById('title').value,
+                publication_date: document.getElementById('publication_date').value,
+                genre: document.getElementById('genre').value,
+                language: document.getElementById('language').value,
+            };
+
+            try {
+                // Enviar los datos al backend
+                const response = await fetch('http://localhost:5000/api/books', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify(formData),
+                });
+
+                if (!response.ok) {
+                    throw new Error('Error al crear el libro');
+                }
+
+                const data = await response.json();
+                alert('Libro creado exitosamente');
+                console.log('Libro creado:', data);
+
+                // Redirigir a la página de libros después de crear el libro
+                window.location.href = 'books.html';
+            } catch (error) {
+                console.error('Error:', error);
+                alert('Hubo un error al crear el libro');
+            }
+        });
+        document.addEventListener('DOMContentLoaded', async () => {
+    const authorSelect = document.getElementById('author_id');
+
+    try {
+        const response = await fetch('http://localhost:5000/api/authors');
+        if (!response.ok) {
+            throw new Error('Error al obtener los autores');
+        }
+
+        const authors = await response.json();
+        authors.forEach(author => {
+            const option = document.createElement('option');
+            option.value = author.id;
+            option.textContent = `${author.id} - ${author.name}`;
+            authorSelect.appendChild(option);
+        });
+    } catch (error) {
+        console.error('Error:', error);
+        alert('No se pudieron cargar los autores');
+    }
+});
+    </script>
 </body>
 </html>
