Añado columna de stock

--- a/todo_frontend/pages/books.html
+++ b/todo_frontend/pages/books.html
@@ -54,6 +54,7 @@
                       <th scope="col">Idioma</th>
                       <th scope="col">Fecha de Publicación</th>
                       <th scope="col">Disponibilidad</th>
+                      <th scope="col">Stock</th>
                       <th scope="col">Acciones</th>
                   </tr>
               </thead>
@@ -87,6 +88,7 @@
               <td>${book.language}</td>
               <td>${book.publication_date}</td>
               <td>${book.availability}</td>
+              <td>${book.stock}</td>
               <td>
                 <button class="btn btn-edit btn-sm me-1" data-id="${book.id}">Editar</button>
                 <button class="btn btn-delete btn-sm" data-id="${book.id}">Eliminar</button>
