--- a/todo_frontend/pages/edit_loans.html
+++ b/todo_frontend/pages/edit_loans.html
@@ -1,90 +1,158 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Editar Préstamo</title>
-  <link rel="stylesheet" href="./assets/formulario.css" />
-  <!-- Bootstrap (opcional para estilos) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Formulario para editar un préstamo existente">
+    <meta name="keywords" content="HTML, CSS, JavaScript, NodeJS, Prisma">
+    <title>Editar Préstamo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./assets/style.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container mt-4">
-    <h1>Editar Préstamo</h1>
-    <form id="loanEditForm">
-      <div class="mb-3">
-        <label for="editLoanBookId" class="form-label">ID del Libro</label>
-        <input type="number" class="form-control" id="editLoanBookId" name="book_id" required />
-      </div>
-      <div class="mb-3">
-        <label for="editLoanPrice" class="form-label">Precio</label>
-        <input type="number" step="0.01" class="form-control" id="editLoanPrice" name="price" required />
-      </div>
-      <div class="mb-3">
-        <label for="editLoanReader" class="form-label">Lector</label>
-        <input type="text" class="form-control" id="editLoanReader" name="reader" required />
-      </div>
-      <div class="mb-3">
-        <label for="editLoanDate" class="form-label">Fecha de Préstamo</label>
-        <input type="text" class="form-control" id="editLoanDate" name="loan_date" required />
-      </div>
-      <div class="mb-3">
-        <label for="editReturnDate" class="form-label">Fecha de Devolución</label>
-        <input type="text" class="form-control" id="editReturnDate" name="return_date" required />
-      </div>
-      <button type="submit" class="btn btn-primary">Guardar Cambios</button>
-    </form>
-  </div>
+    <nav class="navbar navbar-expand-md navbar-light fixed-top">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbar-toggler">
+                <a class="navbar-brand" href="index.html">
+                    <img src="images/icon.png" width="50" alt="Website icon">
+                </a>
+                <ul class="navbar-nav d-flex justify-content-center align-items-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="books.html">Libros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="loans.html">Préstamos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="authors.html">Autores</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="btn btn-outline-dark" href="create_loan.html">Añadir Préstamo</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-  <script>
-    // Obtener el id del préstamo desde la URL (por ejemplo, form_loans.html?id=123)
-    const urlParams = new URLSearchParams(window.location.search);
-    const loanId = urlParams.get('id');
+    <section class="container mt-5 pt-5">
+        <h1 class="page-title">Editar Préstamo</h1>
+        <form id="editLoanForm">
+            <div class="mb-3">
+                <label for="book_id" class="form-label">Libro</label>
+                <select class="form-control" id="book_id" name="book_id" required></select>
+            </div>
+            
+            <div class="mb-3">
+                <label for="price" class="form-label">Precio</label>
+                <input type="number" class="form-control" id="price" name="price" required min="0" step="0.01">
+            </div>
 
-    // Cargar los datos del préstamo para precargar el formulario
-    fetch(`http://localhost:5000/api/loans/${loanId}`)
-      .then(response => {
-        if (!response.ok) throw new Error("Error al obtener los datos del préstamo");
-        return response.json();
-      })
-      .then(loan => {
-        // Se espera que la API retorne un objeto con al menos: book_id, price, reader, loan_date, return_date
-        document.getElementById('editLoanBookId').value = loan.book_id;
-        document.getElementById('editLoanPrice').value = loan.price;
-        document.getElementById('editLoanReader').value = loan.reader;
-        document.getElementById('editLoanDate').value = loanDate;
-        document.getElementById('editReturnDate').value = returnDate;
-      })
-      .catch(error => console.error(error));
+            <div class="mb-3">
+                <label for="reader" class="form-label">Lector</label>
+                <input type="text" class="form-control" id="reader" name="reader" required>
+            </div>
 
-    // Manejar el envío del formulario de edición usando fetch con método PATCH
-    document.getElementById('loanEditForm').addEventListener('submit', (e) => {
-      e.preventDefault();
-      const updatedLoan = {
-        book_id: parseInt(document.getElementById('editLoanBookId').value, 10),
-        price: parseFloat(document.getElementById('editLoanPrice').value),
-        reader: document.getElementById('editLoanReader').value,
-        loan_date: document.getElementById('editLoanDate').value,
-        return_date: document.getElementById('editReturnDate').value
-      };
+            <div class="mb-3">
+                <label for="loan_date" class="form-label">Fecha de Préstamo</label>
+                <input type="date" class="form-control" id="loan_date" name="loan_date" required>
+            </div>
 
-      fetch(`http://localhost:5000/api/loans/${loanId}`, {
-        method: 'PATCH',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(updatedLoan)
-      })
-      .then(response => {
-        if (!response.ok) throw new Error("Error al actualizar el préstamo");
-        return response.json();
-      })
-      .then(data => {
-        alert("Préstamo actualizado exitosamente");
-        window.location.href = 'loans.html'; // Redirige a la lista de préstamos
-      })
-      .catch(error => {
-        console.error(error);
-        alert("Error al actualizar el préstamo");
-      });
-    });
-  </script>
+            <div class="mb-3">
+                <label for="return_date" class="form-label">Fecha de Devolución</label>
+                <input type="date" class="form-control" id="return_date" name="return_date" required>
+            </div>
+
+            <button type="submit" class="btn btn-primary">Actualizar Préstamo</button>
+        </form>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", async () => {
+            // Obtener el ID del préstamo desde la URL
+            const urlParams = new URLSearchParams(window.location.search);
+            const loanId = urlParams.get('id');
+
+            if (!loanId) {
+                alert("ID de préstamo no proporcionado.");
+                window.location.href = "loans.html";
+                return;
+            }
+
+            try {
+                // Obtener el préstamo existente
+                const loanResponse = await fetch(`http://localhost:5000/api/loans/${loanId}`);
+                if (!loanResponse.ok) {
+                    throw new Error("Préstamo no encontrado.");
+                }
+                const loan = await loanResponse.json();
+
+                // Obtener lista de libros
+                const booksResponse = await fetch("http://localhost:5000/api/books");
+                const books = await booksResponse.json();
+                const bookSelect = document.getElementById("book_id");
+
+                // Llenar el select de libros
+                books.forEach(book => {
+                    const option = document.createElement("option");
+                    option.value = book.id;
+                    option.textContent = book.title;
+                    if (book.id === loan.book_id) {
+                        option.selected = true; // Seleccionar el libro actual del préstamo
+                    }
+                    bookSelect.appendChild(option);
+                });
+
+                // Llenar el formulario con los datos del préstamo
+                document.getElementById("price").value = loan.price;
+                document.getElementById("reader").value = loan.reader;
+                document.getElementById("loan_date").value = loan.loan_date.split('T')[0]; // Formatear fecha
+                document.getElementById("return_date").value = loan.return_date.split('T')[0]; // Formatear fecha
+            } catch (error) {
+                console.error("Error:", error);
+                alert("Hubo un error al cargar los datos del préstamo.");
+                window.location.href = "loans.html";
+            }
+        });
+
+        document.getElementById("editLoanForm").addEventListener("submit", async (event) => {
+            event.preventDefault();
+
+            // Obtener el ID del préstamo desde la URL
+            const urlParams = new URLSearchParams(window.location.search);
+            const loanId = urlParams.get('id');
+
+            const formData = {
+                book_id: parseInt(document.getElementById("book_id").value),
+                price: parseFloat(document.getElementById("price").value),
+                reader: document.getElementById("reader").value,
+                loan_date: document.getElementById("loan_date").value,
+                return_date: document.getElementById("return_date").value
+            };
+
+            try {
+                const response = await fetch(`http://localhost:5000/api/loans/${loanId}`, {
+                    method: "PATCH",
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify(formData)
+                });
+
+                if (!response.ok) {
+                    throw new Error("Error al actualizar el préstamo.");
+                }
+
+                alert("Préstamo actualizado exitosamente.");
+                window.location.href = "loans.html";
+            } catch (error) {
+                console.error("Error:", error);
+                alert("Hubo un error al actualizar el préstamo.");
+            }
+        });
+    </script>
 </body>
 </html>
