--- a/todo_frontend/pages/create_loans.html
+++ b/todo_frontend/pages/create_loans.html
@@ -118,7 +118,7 @@
                 window.location.href = "loans.html";
             } catch (error) {
                 console.error("Error:", error);
-                alert("Hubo un error al registrar el préstamo.");
+                alert("Error: No hay stock disponible para ese libro.");
             }
         });
     </script>
