--- a/todo_frontend/pages/create_loans.html
+++ b/todo_frontend/pages/create_loans.html
@@ -12,28 +12,20 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-light fixed-top">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbar-toggler">
-                <a class="navbar-brand" href="index.html">
-                    <img src="images/icon.png" width="50" alt="Website icon">
-                </a>
-                <ul class="navbar-nav d-flex justify-content-center align-items-center">
-                    <li class="nav-item">
-                        <a class="nav-link" href="books.html">Libros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="loans.html">Préstamos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="authors.html">Autores</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-outline-dark" href="create_loan.html">Añadir Préstamo</a>
-                    </li>
-                </ul>
-            </div>
+            <a class="navbar-brand" href="index.html">
+                <img src="images/icon.png" width="50" alt="Website icon">
+            </a>
+            <ul class="navbar-nav d-flex justify-content-center align-items-center">
+                <li class="nav-item">
+                    <a class="nav-link" href="books.html">Libros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="loans.html">Préstamos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="authors.html">Autores</a>
+                </li>
+            </ul>
         </div>
     </nav>
 
@@ -69,9 +61,11 @@
         </form>
     </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", async () => {
+            const urlParams = new URLSearchParams(window.location.search);
+            const bookIdParam = urlParams.get("book_id");
+
             try {
                 // Obtener lista de libros
                 const booksResponse = await fetch("http://localhost:5000/api/books");
@@ -82,6 +76,9 @@
                     const option = document.createElement("option");
                     option.value = book.id;
                     option.textContent = book.title;
+                    if (book.id == bookIdParam) {
+                        option.selected = true;
+                    }
                     bookSelect.appendChild(option);
                 });
             } catch (error) {
