Añado border radius a los botones

--- a/todo_frontend/pages/book_details.html
+++ b/todo_frontend/pages/book_details.html
@@ -39,6 +39,10 @@
             margin-top: 2rem;
             text-align: center;
         }
+        /* Estilos para los botones redondeados */
+        .btn-primary, .btn-success {
+            border-radius: 15px; /* Ajusta este valor para cambiar el redondeo */
+        }
     </style>
 </head>
 <body>
