--- a/todo_frontend/pages/book_details.html
+++ b/todo_frontend/pages/book_details.html
@@ -15,7 +15,7 @@
         }
         
         .book-details {
-            margin-top: 6rem; /* Se ha aumentado el margen superior */
+            margin-top: 6rem;
             padding: 2rem;
             background-color: #a6e3f1;
             border-radius: 10px;
@@ -39,9 +39,8 @@
             margin-top: 2rem;
             text-align: center;
         }
-        /* Estilos para los botones redondeados */
         .btn-primary, .btn-success {
-            border-radius: 15px; /* Ajusta este valor para cambiar el redondeo */
+            border-radius: 15px;
         }
     </style>
 </head>
