--- a/todo_frontend/pages/create_authors.html
+++ b/todo_frontend/pages/create_authors.html
@@ -72,7 +72,7 @@
     event.preventDefault();
     const formData = {
         name: document.getElementById('name').value,
-        born_date: document.getElementById('born_date').value, // Cambio de birthdate a born_date
+        born_date: document.getElementById('born_date').value,
         biography: document.getElementById('biography').value,
         nationality: document.getElementById('nationality').value
     };
