--- a/todo_frontend/pages/create_books.html
+++ b/todo_frontend/pages/create_books.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <!-- Metadata -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Formulario para crear un libro">
     <meta name="keywords" content="HTML, CSS, JavaScript, NodeJS, Prisma">
     <title>Crear Libro</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Estilos personalizados -->
     <link href="./assets/style.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-light fixed-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,11 +37,10 @@
         </div>
     </nav>
 
-    <!-- Formulario para crear un libro -->
+    <!-- Formulario para crear el libro -->
     <section class="container mt-5 pt-5">
         <h1 class="page-title">Crear Nuevo Libro</h1>
         <form id="createBookForm">
-            <!-- Campo para el ID del autor -->
             <div class="mb-3">
                 <label for="author_id" class="form-label">ID del Autor</label>
                 <select class="form-control" id="author_id" name="author_id" required>
@@ -53,25 +48,21 @@
                 </select>
             </div>
 
-            <!-- Campo para el stock -->
             <div class="mb-3">
                 <label for="stock" class="form-label">Stock</label>
                 <input type="number" class="form-control" id="stock" name="stock" required min="0">
             </div>
 
-            <!-- Campo para el título -->
             <div class="mb-3">
                 <label for="title" class="form-label">Título</label>
                 <input type="text" class="form-control" id="title" name="title" required>
             </div>
 
-            <!-- Campo para la fecha de publicación -->
             <div class="mb-3">
                 <label for="publication_date" class="form-label">Fecha de Publicación</label>
                 <input type="date" class="form-control" id="publication_date" name="publication_date" required>
             </div>
 
-            <!-- Campo para el género -->
             <div class="mb-3">
                 <label for="genre" class="form-label">Género</label>
                 <select class="form-control" id="genre" name="genre" required>
@@ -83,7 +74,6 @@
                 </select>
             </div>
 
-            <!-- Campo para el idioma -->
             <div class="mb-3">
                 <label for="language" class="form-label">Idioma</label>
                 <select class="form-control" id="language" name="language" required>
@@ -95,19 +85,15 @@
                 </select>
             </div>
 
-            <!-- Botón para enviar el formulario -->
             <button type="submit" class="btn btn-primary">Crear Libro</button>
         </form>
     </section>
 
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Script para manejar el envío del formulario -->
     <script>
         document.getElementById('createBookForm').addEventListener('submit', async (event) => {
-            event.preventDefault(); // Evita que el formulario se envíe de forma tradicional
+            event.preventDefault();
 
-            // Obtener los datos del formulario
             const formData = {
                 author_id: document.getElementById('author_id').value,
                 stock: document.getElementById('stock').value,
@@ -118,7 +104,6 @@
             };
 
             try {
-                // Enviar los datos al backend
                 const response = await fetch('http://localhost:5000/api/books', {
                     method: 'POST',
                     headers: {
@@ -134,8 +119,6 @@
                 const data = await response.json();
                 alert('Libro creado exitosamente');
                 console.log('Libro creado:', data);
-
-                // Redirigir a la página de libros después de crear el libro
                 window.location.href = 'books.html';
             } catch (error) {
                 console.error('Error:', error);
