--- a/todo_frontend/pages/index.html
+++ b/todo_frontend/pages/index.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Metadata -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Library Website">
     <meta name="keywords" content="HTML,CSS,JavaScript,NodeJS">
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
-    <!-- Title -->
     <title>La Biblioteca de Babel</title>
-    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="images/icon.png">
-    <!-- Boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- CSS -->
     <link href="./assets/style.css" rel="stylesheet">
 </head>
 <body>
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-md navbar-light fixed-top">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,8 +35,6 @@
           </div>
         </div>
     </nav>
-
-    <!-- Sección de Bienvenida -->
     <section>
         <div class="container-fluid">
             <div class="row">
@@ -56,26 +48,18 @@
             </div>
         </div>
     </section>
-
-    <!-- Sección de Libros -->
     <section>
         <h1 style="text-align: center; padding-top: 4rem; padding-bottom: 2rem; font-family: 'Courier New', Courier, monospace;">Libros</h1>
         <div class="container">
             <div class="row" id="books-container">
-                <!-- Las tarjetas de los libros se insertarán aquí dinámicamente -->
             </div>
         </div>
     </section>
-
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Script para cargar los libros -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const booksContainer = document.getElementById('books-container');
 
-            // Función para obtener los libros desde la API
             async function fetchBooks() {
                 try {
                     const response = await fetch('http://localhost:5000/api/books');
@@ -88,7 +72,7 @@
 
             // Para mostrar las tarjetas de los libros
             function displayBooks(books) {
-                booksContainer.innerHTML = ''; // Limpio el contenedor antes de agregar nuevas tarjetas
+                booksContainer.innerHTML = ''; // Limpia el contenedor antes de agregar las tarjetas nuevas
 
                 books.forEach(book => {
                     const card = document.createElement('div');
@@ -112,7 +96,6 @@
                         </div>
                     `;
 
-                    // Agregar evento de clic a la tarjeta
                     card.querySelector('.card').addEventListener('click', () => {
                         window.location.href = `book_details.html?book_id=${book.id}`;
                     });
@@ -121,7 +104,6 @@
                 });
             }
 
-            // Llamar a la función para obtener y mostrar los libros
             fetchBooks();
         });
 
